modif page formulaire

--- a/css/Formulaire.css
+++ b/css/Formulaire.css
@@ -5,8 +5,8 @@ body {
   font-weight: 300;
   font-size: 15px;
   line-height: 1.7;
-  color: #c4c3ca;
-  background-color: #1f2029;
+  color: black;
+  background-color: white;
   overflow-x: hidden;
 }
 a {
@@ -17,10 +17,10 @@ a:hover {
   text-decoration: none;
 }
 .link {
-  color: #c4c3ca;
+  color: black;
 }
 .link:hover {
-  color: #ffeba7;
+  color: dodgerblue;
 }
 p {
   font-weight: 500;
@@ -59,7 +59,7 @@ h6 span {
   padding: 0;
   margin: 10px auto;
   cursor: pointer;
-  background-color: #ffeba7;
+  background-color: dodgerblue;
 }
 .checkbox:checked + label:before,
 .checkbox:not(:checked) + label:before {
@@ -68,8 +68,8 @@ h6 span {
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  color: #ffeba7;
-  background-color: #102770;
+  color: dodgerblue;
+  background-color: black;
   font-family: "unicons";
   content: "\eb4f";
   z-index: 20;
@@ -108,7 +108,7 @@ h6 span {
 .card-back {
   width: 100%;
   height: 100%;
-  background-color: #2a2b38;
+  background-color: white;
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg");
   background-position: bottom center;
   background-repeat: no-repeat;
@@ -158,8 +158,8 @@ h6 span {
   line-height: 22px;
   letter-spacing: 0.5px;
   outline: none;
-  color: #c4c3ca;
-  background-color: #1f2029;
+  color: black;
+  background-color: dodgerblue;
   border: none;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
@@ -169,7 +169,7 @@ h6 span {
 .form-style:active {
   border: none;
   outline: none;
-  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, 0.2);
+  box-shadow: 0 4px 8px 0 white;
 }
 .input-icon {
   position: absolute;
@@ -179,31 +179,31 @@ h6 span {
   font-size: 24px;
   line-height: 48px;
   text-align: left;
-  color: #ffeba7;
+  color: black;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 
 .form-group input:-ms-input-placeholder {
-  color: #c4c3ca;
+  color: black;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 .form-group input::-moz-placeholder {
-  color: #c4c3ca;
+  color: black;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 .form-group input:-moz-placeholder {
-  color: #c4c3ca;
+  color: white;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 .form-group input::-webkit-input-placeholder {
-  color: #c4c3ca;
+  color: black;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
@@ -253,19 +253,19 @@ h6 span {
   -ms-flex-pack: center;
   text-align: center;
   border: none;
-  background-color: #ffeba7;
-  color: #102770;
-  box-shadow: 0 8px 24px 0 rgba(255, 235, 167, 0.2);
+  background-color: black;
+  color: white;
+  box-shadow: 0 8px 24px 0 black;
 }
 .btn:active,
 .btn:focus {
-  background-color: #102770;
-  color: #ffeba7;
+  background-color: white;
+  color: black;
   box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
 }
 .btn:hover {
-  background-color: #102770;
-  color: #ffeba7;
+  background-color: white;
+  color: black;
   box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
 }
 
