--- a/css/profil.css
+++ b/css/profil.css
@@ -22,3 +22,20 @@ img {
 .padding-top {
   padding-top: 15vh;
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-img-top {
+  height: 30vh;
+  object-fit: cover;
+}
+
+.card-body {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
